src/test/deca/context/invalid/sansobjet/plus_type.deca
// At least one of the members of this operation is not compatible with this operator
// Description : Incompatibilité du plus entre deux types différents (non entier, float)
// Resultat : Echec ligne 7 : int et true ne peuvent être additionné.

{
    int x = 5;
    x = x + true;
}